Move JTS specific methods to "jts" subpackage.